--- a/main/staticfiles/main.css
+++ b/main/staticfiles/main.css
@@ -1,22 +1,3 @@
-#mapa_mala {
-    height: 400px;
-    width: 70%;
-    margin: 0 auto;
-    margin-bottom: 30px;
-}
-
-#mapa_velka {
-    height: 600px;
-    width: 90%;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-
-.zelena {
-    color: green;
-}
-
 .sidebar {
     position: fixed;
     top: 0;
@@ -32,16 +13,19 @@
     padding: 30px 20px;
 }
 
+
 .logo img {
     width: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
+    margin-top: 60px;
+   
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding-top: 150px;
+    padding-top: 10px;
 }
 
 .menu a {
@@ -75,21 +59,6 @@
     background-color: #ffbbb4;
 }
 
-.hamburger {
-    display: none;
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 1001;
-    background-color: #002afc;
-    color: white;
-    border: none;
-    font-size: 1.5rem;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 @media (max-width: 800px) {
     .sidebar {
         transform: translateX(-100%);
@@ -105,6 +74,21 @@
         left: 0;
         background: linear-gradient(180deg, #60e688, #002afc);
     }
+
+    .hamburger {
+    display: none;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 1001;
+    background-color: #002afc;
+    color: white;
+    border: none;
+    font-size: 1.5rem;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
     .close-btn {
         display: block;
@@ -123,4 +107,14 @@
 
 .sidebar.active+.hamburger {
     display: none;
+}
+
+.close-btn {
+    display: none;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 2rem;
+    cursor: pointer;
+    color: white;
 }
